week_02-experiment-tracking. Update .env

--- a/cohorts/2023/02-experiment-tracking/.env.example
+++ b/cohorts/2023/02-experiment-tracking/.env.example
@@ -2,7 +2,7 @@
 # MLFLOW_URI="http://0.0.0.0:5000"    # OK
 # MLFLOW_URI="http://127.0.0.1:5000"  # OK
 
-MLFLOW_URI="http://158.160.105.157:5000"
+MLFLOW_URI="<hostname>:5000"
 MLFLOW_S3_ENDPOINT_URL="https://storage.yandexcloud.net"
 
 AWS_ACCESS_KEY_ID="<aws_access_key_id>"
