--- a/cohorts/2023/04-deployment/homework/Dockerfile
+++ b/cohorts/2023/04-deployment/homework/Dockerfile
@@ -1,5 +1,13 @@
-FROM python:3.10.0-slim
+FROM svizor/zoomcamp-model:mlops-3.10.0-slim
+
+RUN pip install -U pip
+RUN pip install pipenv 
 
 WORKDIR /app
-COPY [ "model2.bin", "model.bin" ]
-    
+
+COPY ["Pipfile", "Pipfile.lock", "."]
+RUN pipenv install --system --deploy
+
+COPY ["starter.py", "."]
+
+ENTRYPOINT [ "python", "starter.py", "-y", "2022", "-m", "4", "-c", "yellow" ]
